yandex.com - Images are not loaded when accessed from image search
Categories
(Core :: Layout: Flexbox, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | + | verified |
firefox135 | + | fixed |
People
(Reporter: rbucata, Assigned: TYLin)
References
(Regression, )
Details
(Keywords: regression, webcompat:platform-bug, webcompat:site-report, Whiteboard: [webcompat-source:web-bugs][webcompat:sightline])
User Story
platform:windows,mac,linux,android impact:content-missing configuration:general affects:all branch:release diagnosis-team:layout
Attachments
(6 files)
7.55 MB,
video/mp4
|
Details | |
28.59 KB,
text/html
|
Details | |
28.29 KB,
text/html
|
Details | |
1.17 KB,
text/html
|
Details | |
Bug 1936259 Part 1 - Make Set() and Get() in IntrinsicISizesCache consistent in the logic. r?#layout
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Environment:
Operating system: Windows 11
Firefox version: Firefox 135.0
Steps to reproduce:
- Navigate to: https://yandex.com/images/search?img_url=https%3A%2F%2Fdiscovery55.ru%2Fwp-content%2Fuploads%2F2016%2F03%2F36542_original.jpg&lr=87&nl=1&pos=2&rpt=simage&source=morda&text=Altai
- Open an image from the list of image searches and observe
Expected Behavior:
The image loads
Actual Behavior:
The image does not load
Notes:
- Reproduces regardless of the status of ETP
- Reproduces in firefox-nightly
- Does not reproduce in firefox-release, and chrome
- Sometimes navigation through the image slider is needed to replicate the issue
Created from https://github.com/webcompat/web-bugs/issues/144934
Reporter | ||
Updated•8 months ago
|
Reporter | ||
Comment 1•8 months ago
|
||
Reporter | ||
Updated•8 months ago
|
![]() |
||
Comment 2•8 months ago
•
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=a4434b7aabdac9a19413cbeff360c874bb138110&tochange=7df628ab162c87151d7783027905fa7950da76ef
Work around:
.MMImage-Origin {
opacity: 1 !important;
}
Updated•8 months ago
|
Comment 3•8 months ago
|
||
Set release status flags based on info from the regressing bug 1926015
:TYLin, since you are the author of the regressor, bug 1926015, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Updated•8 months ago
|
Comment 4•8 months ago
•
|
||
(In reply to Alice0775 White from comment #2)
Work around:
.MMImage-Origin {
opacity: 1 !important;
}
This happens to be a workaround but it's not quite hitting the right element. In e.g. Chrome, this .MMImage-Origin
element has opacity:0 as well, so that's not actually the element that's supposed to paint here.
Really, the site has two copies of the img
for some reason -- this .MMImage-Origin
one that Alice0775's workaround found (which is supposed to be opacity:0
and hence hidden), and another copy with class="MMImage-Preview"
which is supposed to show up.
It's the MMImage-Preview
one that we're sizing to be 0x0 for some reason now (and hence not painting).
Comment 5•8 months ago
|
||
Comment 6•8 months ago
|
||
Comment 7•8 months ago
|
||
Updated•8 months ago
|
Comment 8•8 months ago
|
||
I'm morphing this into a regularly-classified regression bug rather than a webcompat site-report, because this was an actual regression that we'd ideally like to avoid shipping rather than a webcompat bug that's downstream of some known/longstanding platform issue.
Comment 9•8 months ago
|
||
In testcase 3 (comment 7), I notice that the issue only happens when both width
and height
properties are specified as percentages on the lime canvas. If either of those is removed, or changed to specify some other units (px, em, vh, whatever...) it works as expected -- and the percentage in the other axis then works, too.
Comment 10•8 months ago
|
||
[Tracking Requested - why for this release]: The severity is high, though it derives from the webcompat report, maybe for a platform bug it is too high?
Comment 11•8 months ago
|
||
I think it's accurate to consider it high-severity; and we're pretty sure this the same as bug 1934719. TYLin is investigating.
Updated•8 months ago
|
Comment 12•8 months ago
|
||
The bug is marked as tracked for firefox134 (beta). However, the bug still isn't assigned.
:fgriffith, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 13•8 months ago
|
||
I'm looking into this.
Comment 14•8 months ago
|
||
Thanks Ting-Yu!
Assignee | ||
Comment 15•8 months ago
|
||
Use "percentage" in the variable name since other member variables use it.
Introduce usePercentageAwareCache
in Get()
to ensure consistency with
Set()
.
Assignee | ||
Comment 16•8 months ago
|
||
In Get()
, when the percentage-aware cache is used, we always reject the cache
whenever the percentage basis changes. Therefore, in Set()
we should clear
mCacheWithPercentageBasis
after mLastPercentageBasis
is assigned to a new
value. Otherwise, if the out-of-line cache is already allocated, not clearing
mCacheWithPercentageBasis
can result in a stale PrefISize
cache after
MinISize
cache is updated, and vice versa.
I didn't add a new wpt based on the reduced testcase 3 in the bug because I
failed to reduced it to a simple enough state that I can describe it clearly.
However, this patch fixed two existing WPTs that have a dynamic update to an
absolute element containing a aspect-ratio child. I feel it's enough for
covering this patch.
Assignee | ||
Updated•8 months ago
|
Comment 18•8 months ago
|
||
Comment 19•8 months ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/5159e4a66b19
https://hg.mozilla.org/mozilla-central/rev/e8772f6333f5
Assignee | ||
Comment 20•8 months ago
|
||
Comment on attachment 9444189 [details]
Bug 1936259 Part 1 - Make Set() and Get() in IntrinsicISizesCache consistent in the logic. r?#layout
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: No user impact because this doesn't change behavior.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This patch doesn't change behavior. It is a preparation for Bug 1936259 Part 2.
- String changes made/needed: None.
- Is Android affected?: Yes
Assignee | ||
Comment 21•8 months ago
|
||
Comment on attachment 9444190 [details]
Bug 1936259 Part 2 - Clear mCacheWithPercentageBasis whenever mLastPercentageBasis is changed. r?#layout
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: The images on yandex.com (this bug) and Kanopy.com (Bug 1934719) are missing or distorted.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch invalidate a stale size cache, and it doesn't change how the size is computed.
- String changes made/needed: None.
- Is Android affected?: Yes
Comment 22•8 months ago
|
||
Comment on attachment 9444189 [details]
Bug 1936259 Part 1 - Make Set() and Get() in IntrinsicISizesCache consistent in the logic. r?#layout
Approved for 134 RC1.
Updated•8 months ago
|
Updated•8 months ago
|
Updated•8 months ago
|
Comment 23•8 months ago
|
||
uplift |
Reporter | ||
Comment 24•7 months ago
•
|
||
Verified as fixed on the latest Firefox RC Build 134.0. Images are loading when accessed from an image search. Navigation through the image slider also loads the images as expected.
Tested with:
Browser / Version: Firefox 134.0 Candidate
Operating System: Windows 10 PRO x64
Operating System: Ubuntu 22.4 LTS x64
Operating System: Mac Ventura 13.1
Reporter | ||
Updated•7 months ago
|
Reporter | ||
Updated•7 months ago
|
Updated•7 months ago
|
Description
•