Bug 1936259 Part 1 - Make Set() and Get() in IntrinsicISizesCache consistent in the logic. r=dshin a=RyanVM

Use "percentage" in the variable name since other member variables use it.
Introduce `usePercentageAwareCache` in `Get()` to ensure consistency with
`Set()`.

Differential Revision: https://phabricator.services.mozilla.com/D232400